--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,7 +14,7 @@ cursor_trail_decay 0.1 0.5
 cursor_trail_start_threshold 3
 
 
-background_opacity 0.85
+background_opacity 0.80
 
 
 # Disabling Kitty Sound
@@ -33,7 +33,7 @@ map ctrl+w close_tab
 # window maps
 
 map alt+shift+w close_window 
-map alt+shift+enter launch --location=vsplit
+map alt+shift+enter launch --location=hsplit
 map alt+shift+k next_window
 map alt+shift+j previous_window
 map ctrl+f toggle_fullscreen
